@@ -1,3 +1,6 @@
+/* Define if filesystem /proc exists */
+#undef HAVE_PROC
+
 /* Define if structure sysinfo has bufferram */
 #undef HAVE_SYSINFO_BUFFERRAM
 
